# PyStreamASR

./: .dockerignore  .env.example  .gitignore  AGANT.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_zh.md  docker-compose.yml  gunicorn.conf.py  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt
api/: endpoints.py
core/: config.py  context.py  logging.py  metrics.py
docs/: API.md  API_zh.md
models/: schemas.py
scripts/: __init__.py  benchmark_audio.py  download_models.py  manage_service.bat  manage_service.sh  pystreamasr.service  service_manager.py  service_manager_cli.py  service_manager_tui.py  simulate_concurrent_streams.py  simulate_stream.py
scripts/tests/: check_imports.py  test_audio_debug.py  test_audio_processor.py  test_endpoints.py  test_inference_backpressure.py  test_inference_model_path.py  test_logging_context.py  test_metrics_endpoint.py  test_runtime_metrics.py  test_service_manager.py  test_service_manager_cli.py  test_service_manager_tui.py  test_simulate_concurrent_streams.py  test_storage_reliability.py  verify_audio_fix.py  verify_components.py  verify_endpoints.py  verify_phase_4_5.py
services/: audio.py  inference.py  schemas.py  storage.py
